[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = {version = "1", features = ["full"]}
bb8 = "0.7.1"
bytes = "1.1.0"
async-trait = "0.1.80"
tokio-util = "0.6"

[profile.dev]
opt-level = 0
debug = true
strip = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = true

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
